[metadata]
name = 
author = wangyangyang
author-email = wangyangyang1219@126.com
summary = Just a test
classifier =
    Development Status :: 1 - Planning
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
data_files =

[entry_points]
console_scripts =
    
paste.app_factory =
    web = app.web.app_factory
